[package]
name = "rust-elf"
version = "0.1.0"
authors = ["Adam Stepan <adam.stepan@firma.seznam.cz>"]
edition = "2018"
keywords = ["readelf", "elf"]
description = "Utility that can display information about content of ELF files"

[dependencies]
byteorder = { version = "1" }
structopt = { version = "0.3", features = [ "paw" ] }
paw = "1.0"
thiserror = "1.0"
anyhow = "1.0"
